--- a/myfirstpractice/index.html
+++ b/myfirstpractice/index.html
@@ -17,7 +17,7 @@
         <h2><span>学習</span>のスタイル</h2>
         <p>自学習形式と講義形式のいいとこ取り。だから効率的。</p>
     </div>
-    <img src="cat.jpg" alt="テスト画像">
+    <img src="cat3.jpg" alt="テスト画像">
     <a href="https://web-camp.io/">webcampのサイト</a>
     <ul>
         <li>美味しいご飯を食べる</li>
